# MMM-Guide

./: .gitignore  AGENTS.md  README.md  REPO_REVIEW_AND_NEXT_STEPS.md  mmm_multiplicative_example.ipynb  pyproject.toml
.github/workflows/: tests.yml
.streamlit/: config.toml
ancestry_mmm/: app.py
ancestry_mmm/components/: __init__.py  charts.py  ui.py
ancestry_mmm/core/: AGENTS.md  __init__.py  activities.py  approval.py  attribution.py  brand_search.py  canonical_curves.py  curve_bank.py  diagnostics.py  evidence_tiers.py  fingerprint.py  funnel.py  hierarchical_model.py  identification_diagnostics.py  market_config.py  market_specific_attribution.py  market_specific_diagnostics.py  market_specific_model.py  market_specific_predict.py  media_costs.py  media_units.py  model_comparison.py  models.py  net_billthrough.py  optimization.py  outcomes.py  pathways.py  persistence.py  predict.py  promotions.py  report.py  scenario_governance.py  schema.py  simulation.py  transformations.py  uncertainty.py
ancestry_mmm/data/: __init__.py  loader.py  pipeline.py  preprocessor.py
ancestry_mmm/pages/: 01_Data_Upload.py  02_Transform_Pipeline.py  03_Structure_Segments_Markets.py  04_Model_Config.py  05_Model_Training.py  06_Diagnostics.py  07_Results_Curve_Bank.py  08_Scenario_Planner.py  09_Project_Export.py  10_Channel_Media_Units.py  11_Market_Descriptors.py  12_Compare_Models.py  AGENTS.md
ancestry_mmm/sample_data/: ancestry_controls_sample.csv  ancestry_media_sample.csv  ancestry_outcomes_sample.csv  ancestry_segment_ltv_sample.csv  generate_sample_data.py
ancestry_mmm/tests/: AGENTS.md  conftest.py  test_activities.py  test_approval.py  test_attribution.py  test_brand_search.py  test_canonical_curves.py  test_curve_bank.py  test_diagnostics_funnel_apptest.py  test_diagnostics_pathway_drift_apptest.py  test_display.py  test_drift_status_component.py  test_evidence_tiers.py  test_fingerprint.py  test_funnel.py  test_g111_hotfix.py  test_g113_contract.py  test_g11_hardening.py  test_hierarchical_model.py  test_identification_diagnostics.py  test_market_config.py  test_market_specific_attribution.py  test_market_specific_diagnostics.py  test_market_specific_model.py  test_market_specific_predict.py  test_media_costs.py  (+26 more)
archive/: README.md
backend/: main.py
docs/: activity_taxonomy.md  ancestry_fh_mmm.md  brand_search.md  business_questions.md  canonical_curves.md  changelog.md  curve_bank.md  data_requirements.md  decision_log.md  dna_fh_causal_structure.md  g2a5_scenario_governance.md  glossary.md  limitations.md  market_hierarchy.md  media_outcome_pathways.md  media_units_and_inflation.md  model_validation.md  modelling_methodology.md  net_billthrough.md  outcomes.md  project_objectives.md  pymc_marketing_alignment.md  scenario_incremental_economics.md  scenario_planner.md  segment_level_estimation.md  segment_methodology.md  user_guide.md
(+45 files in other folders)
