[project]
name = "mmm-guide"
version = "0.1.0"
description = "Marketing Mix Modelling - Complete Guide with Practical Implementation"
requires-python = ">=3.11"
dependencies = [
    # Data manipulation
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Bayesian modelling
    "pymc>=5.10.0",
    "pymc-marketing>=0.4.0",
    "arviz>=0.17.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    # Statistics and ML utilities
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
    # Progress bars
    "tqdm>=4.66.0",
    # Excel support (for data dictionary)
    "openpyxl>=3.1.0",
    "graphviz>=0.21",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]
