[project]
name = "mmm-guide"
version = "0.1.0"
description = "Marketing Mix Modelling - Complete Guide with Practical Implementation"
# Upper bound is deliberate: pymc/pytensor have no released build for Python 3.13+
# yet, and hosts that default to the newest available interpreter (e.g. Streamlit
# Community Cloud) will otherwise fail dependency resolution entirely. See
# runtime.txt, which pins the same range for hosts that read it directly.
requires-python = ">=3.11,<3.13"
dependencies = [
    # Data manipulation
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Bayesian modelling
    "pymc==5.28.5",
    "pytensor==2.38.3",
    "pymc-marketing==0.19.2; python_version < '3.12'",
    "pymc-marketing==0.19.4; python_version >= '3.12'",
    "arviz==0.23.4",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    # Streamlit app (ancestry_mmm/)
    "streamlit>=1.30.0",
    # Statistics and ML utilities
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
    # Progress bars
    "tqdm>=4.66.0",
    # Excel support (for data dictionary)
    "openpyxl>=3.1.0",
    "graphviz>=0.21",
    # Parquet read/write for project persistence (ancestry_mmm/core/persistence.py)
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["ancestry_mmm/tests"]
